--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
-    <script src="javascript.js"></script>
+    
 </head>
 <body>
+    <div class="userChoiceDiv">
+        <button>ROCK</button>
+        <button>PAPER</button>
+        <button>SCISSORS</button>
+    </div>
+
+    <div class="scoreboard"></div>
     
+    <script src="javascript.js"></script>
 </body>
 </html>
